// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should render 1`] = `
<input
  aria-label="Search videos"
  className="root"
  data-cy="search-input"
  onChange={[MockFunction]}
  placeholder="Search"
  type="text"
  value=""
/>
`;

exports[`SearchInput should set placeholder if passed 1`] = `
<input
  aria-label="test placeholder videos"
  className="root"
  data-cy="search-input"
  onChange={[MockFunction]}
  placeholder="test placeholder"
  type="text"
  value=""
/>
`;
